--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -34,10 +34,10 @@
                             if (data == "ok"){
                                 window.location = "/users"
                             }
-                            else alert('error');
+                            else alert(data);
                         })
 
-        })
+        });
 
         $('#create_roles').click(
                 function(){
