--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="/static/jquery.js"></script>
     <script type="text/javascript" src="/static/site.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <script type="text/javascript" src="/static/nav.js"></script>
     <link type="text/css" href="/static/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
     <!-- links and scripts -->
     {% block css %}
@@ -19,8 +20,8 @@
     {% block script %}
     <script type="text/javascript">
     $(document).ready(function(){
-        load_role('{{current_role}}','{{user.key}}');
-    })
+        load('/{{current_role}}');
+    });
     </script>
     {% endblock %}
 </head>
@@ -40,7 +41,7 @@
                         {% endfor %}
                     </select>
                 </td>
-                <td id="settings" onclick="load('/hr/settings'); return false;" style="display: none;"><a href="/hr/settings">settings</a></td>
+                <td id="settings" style="display: none;"><a href="#/hr/settings">settings</a></td>
                 <td><a href="/logout">Logout</a></td>
             </tr>
         </table>
