--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -22,6 +22,7 @@
     $(document).ready(function(){
         load('/{{current_role}}');
     });
+    var message = '';
     </script>
     {% endblock %}
 </head>
