--- a/application/templates/api.manager.html
+++ b/application/templates/api.manager.html
@@ -21,14 +21,14 @@
                     <td>{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}}</td>
                     <td>
                         {% if pr.manager_form %}
-                            <a href="#/pr/get/manager/{{pr.key}}">load</a>
+                            <a href="#/manager/get/manager/{{pr.key}}">load</a>
                         {% else %}
-                            <a href="#/pr/add/manager/{{pr.employee.key}}">create</a>
+                            <a href="#/manager/add/manager/{{pr.employee.key}}">create</a>
                         {% endif %}
                     </td>
                     <td>{% if pr.employee_form %}
                             {% ifnotequal pr.employee_form.status 'draft' %}
-                                <a href="#/pr/get/employee/{{pr.key}}">load</a>
+                                <a href="#/manager/get/employee/{{pr.key}}">load</a>
                             {% else %}
                                 <p>none</p>
                             {% endifnotequal %}
