--- a/application/templates/api.readonly_maf.html
+++ b/application/templates/api.readonly_maf.html
@@ -36,7 +36,7 @@
 <h3><a href="#">Achievements and Challenges</a></h3>
     <div>
         <div id="prev_achievements">
-            <p class="link" onclick="display(this)">Show previous achievements</p>
+            <<a href="#" onclick="display(this); return false">Show previous achievements</a>
             <div class='hidden'>
                 <ul>
                 {% for achievement in prev_form.achievements %}
@@ -57,7 +57,7 @@
         </div>
 
         <div id="prev_responsibilities">
-            <p class="link" onclick="display(this)">Show previous responsibilities</p>
+            <a href="#" onclick="display(this); return false">Show previous responsibilities</a>
             <div class='hidden'>
                 <ul>
                 {% for responsibility in prev_form.responsibilities %}
@@ -78,7 +78,7 @@
         </div>
 
         <div id="prev_challenges" >
-            <p class="link" style="color:#15317E" onclick="display(this)">Previous challenges</p>
+            <a href="#" onclick="display(this); return false">Previous challenges</a>
             <div class='hidden'>
                 <ul>
                 {% for challenge in prev_form.challenges %}
